syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

import "scalapb/scalapb.proto";
option java_multiple_files = true;
option java_package = "com.definition.domain";

package com.definition.domain;

option (scalapb.options) = {
  lenses: true,
  preserve_unknown_fields: false,
  no_default_values_in_constructor: false,
  no_primitive_wrappers: true,
  single_file: true,
  preamble: "sealed trait Cmd extends scalapb.GeneratedMessage",
  preamble: "sealed trait Event extends scalapb.GeneratedMessage",
};

message Create {
  option (scalapb.message).extends = "Cmd";

  string owner_id = 1;
  Definition definition = 2 [(scalapb.field).no_box = true];
  string replyTo = 3;
}

message Update {
  option (scalapb.message).extends = "Cmd";

  string owner_id = 1;
  Definition new_definition = 2 [(scalapb.field).no_box = true];
  com.definition.domain.DefinitionLocation prev_definition_location = 3 [(scalapb.field).no_box = true];
  string replyTo = 5;
}

message Release {
  option (scalapb.message).extends = "Cmd";

  string owner_id = 1;
  com.definition.domain.DefinitionLocation prev_definition_location = 2 [(scalapb.field).no_box = true];
  string replyTo = 4;
}

message Passivate {
  option (scalapb.message).extends = "Cmd";
}

message Acquired {
  option (scalapb.message).extends = "Event";
  string owner_id = 1;
  Definition definition = 2 [(scalapb.field).no_box = true];
  int64 seq_num = 3;
}

message Released {
  option (scalapb.message).extends = "Event";
  string owner_id = 1;
  com.definition.domain.DefinitionLocation prev_definition_location = 2 [(scalapb.field).no_box = true];
}

message ReleaseRequested {
  option (scalapb.message).extends = "Event";
  string owner_id = 1;
  com.definition.domain.DefinitionLocation prev_definition_location = 2 [(scalapb.field).no_box = true];
}

message Definition {
  string name = 1;
  string address = 2;
  string city = 3;
  string country = 4;
  optional string state = 5;
  optional string zipCode = 6;
  optional string brand = 7;
}

message TakenDefinitionState {
  map<string, DefinitionMetadata> index=1;
}

message DefinitionMetadata {
  string owner_id = 1;
  int64 seq_num = 2;
}

message DefinitionLocation {
  int64 entity_id = 1;
  int64 seq_num = 2;
}